# meteor

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  README  config.guess  config.h.in  config.sub  configure  configure.ac  ltmain.sh
demos/: Makefile.am  glut.c  hello.c  rwerrors.c
libmeteor/: Makefile.am  build.c  data.c  fileio.c  heap.c  infix2prefix.scm  internal.h  kdtree.c  linalg.h  matrix.c  mem.c  mesh.c  meteor.h  tetracalc.c
man/: Makefile.am  meteor.1  meteorBuild.3  meteorClip.3  meteorCorrectTexCoords.3  meteorError.3  meteorFormat.3  meteorFreeMem.3  meteorFunc.3  meteorLoad.3  meteorMerge.3  meteorMultMatrix.3  meteorPointCount.3  meteorPropagate.3  meteorReadPoints.3  meteorReadTriangles.3  meteorReset.3  meteorRewind.3  meteorRotate.3  meteorSave.3  meteorSetSize.3  meteorTexCoordFunc.3  meteorTriangleCount.3
man/html/: meteor.1.html  meteorBuild.3.html  meteorClip.3.html  meteorColorFunc.3.html  meteorCorrectTexCoords.3.html  meteorError.3.html  meteorFormat.3.html  meteorFreeMem.3.html  meteorFunc.3.html  meteorLoad.3.html  meteorMerge.3.html  meteorMultMatrix.3.html  meteorPointCount.3.html  meteorPropagate.3.html  meteorReadPoints.3.html  meteorReset.3.html  meteorRewind.3.html  meteorSave.3.html  meteorScale.3.html  meteorSetSize.3.html  meteorTriangleMergeableCount.3.html  meteorWritePoints.3.html
src/: Makefile.am  cliptest.c  glut.c  glut.h  image.h  main.c  opengl.c  opengl.h  osmesa.c  osmesa.h  png.c  util.c  util.h  video.c  video.h
src/models/: 2spheres.c  blobs.c  cone.c  cube.c  earth.c  earth3d.c  earthtorus.c  earthtorus3d.c  flat.c  flatearth.c  growingsphere.c  meteor.c  plane.c  quadric.c  quatdiff.c  quaternion.c  sphere.c  spheredemo.c  torus.c  torusperlin.c
